--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,6 @@ dependencies {
     //RETROFIT
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-jackson:2.0.0-beta2'
+    //GENERIC ADAPTER
+    compile 'com.lfm.rvgenadapter:rvgenadapter:1.0.95'
 }
