--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.1'
     //RETROFIT
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
+    compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-jackson:2.0.0-beta2'
     //GENERIC ADAPTER
     compile 'com.lfm.rvgenadapter:rvgenadapter:1.0.95'
