--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0-alpha7'
+        classpath 'com.android.tools.build:gradle:2.1.2'
         //RETROFIT
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         //RETROLAMBDA
